# molencoder

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: classification_finetune.ipynb  cls_embedding.ipynb  fill_mask.ipynb  minimal_fill_mask_example.ipynb  regression_finetune.ipynb
examples/ochem_integration/: README.md  apply.py  example_config_classification.cfg  example_config_multitask_classification_nans.cfg  example_config_regression.cfg  example_data_with_nans.csv  example_multitask_classification_with_nans.csv  requirements.txt  train.py
examples/ochem_integration/example_data/: example_config_binary_classification.cfg  example_config_classification.cfg  example_config_multitask_classification.cfg  example_config_multitask_classification_nans.cfg  example_config_regression.cfg  example_config_regression_with_nans.cfg  example_config_weighted_classification.cfg  example_data_binary_classification.csv  example_data_classification.csv  example_data_multitask_classification.csv  example_data_regression.csv  example_data_with_nans.csv  example_multitask_classification_with_nans.csv
experiments/experiment_creation/creation_scripts/: create_hparam_experiment.sh  create_masking_ratio_experiment.sh  create_masking_ratios_explicit_hs.sh  create_mlm_experiment.sh  create_small_ds_pretraining.sh  model_dataset_sizes.sh
experiments/experiment_creation/run_scripts/: run_hparam_experiment.sh  run_masking_ratio_experiment.sh  (+3 more)
tests/: test_cross_validation.py  test_polaris_evaluation.py  test_statistical_evaluation.py
tokenizer/: character-level.json
(+206 files in other folders)
